...
                
                Spacer()
                
                if !isHistory {
                    CustomTextButton(action: {
                        self.showingAddProgramSheet.toggle()
                    }, label: "Add training program")
                    .padding()
                    .sheet(isPresented: $showingAddProgramSheet) {
                        let viewmodel = AddTrainingProgramViewModel(programs: self.session.programs)
                        AddTrainingProgramView(viewmodel: viewmodel, show: self.$showingAddProgramSheet)
                    }
                }
...
        }.navigationBarItems(trailing:
            HStack {
                if !isHistory {
                    Button(action: {
                        self.showingAddProgramSheet.toggle()
                    }) {
                        Image(systemName: "plus").imageScale(.large)
                    }.sheet(isPresented: $showingAddProgramSheet) {
                        let viewmodel = AddTrainingProgramViewModel(programs: self.session.programs)
                        AddTrainingProgramView(viewmodel: viewmodel, show: self.$showingAddProgramSheet)
                    }
                }
            }
...
